--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -1,18 +1,9 @@
-<!--
-If you want to include any custom html just before </head>, put it in this file.
-Or you can delete these file if you don't need it.
--->
-<!-- for example, you could insert this custom css, which makes the bigimg not stretch:
-<style>
-.intro-header.big-img, .intro-header.big-img  .big-img-transition {
-  -webkit-background-size: contain !important;
-  -moz-background-size: contain !important;
-  background-size: contain !important;
-  -o-background-size: contain !important;
-  background-color: lightgrey;
-}
-</style>
--->
-<!-- or you could include some additional css libraries:
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.19.1/vis.css" integrity="sha256-I1UoFd33KHIydu88R9owFaQWzwkiZV4hXXug5aYaM28=" crossorigin="anonymous" />
--->
+<!-- Icons -->
+<!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
+<link rel="apple-touch-icon-precomposed" href="/img/apple-touch-icon-precomposed.png">
+<!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/img/apple-touch-icon-72x72-precomposed.png">
+<!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/img/apple-touch-icon-114x114-precomposed.png">
+<!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/apple-touch-icon-144x144-precomposed.png">
