--- a/layouts/post/list.html
+++ b/layouts/post/list.html
@@ -5,8 +5,9 @@
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
           <div class="page-heading">
-            <h1 style="font-size: 60px;">{{ .Site.Title }}</h1>
-            <h2>Blog Posts by {{ .Site.Author.name }}</h2>
+            <h1>{{ .Site.Title }}</h1>
+            <hr class="small">
+            <span class="page-subheading">blog posts by {{ .Site.Author.name }}</span>
           </div>
         </div>
       </div>
