--- a/themes/beautifulhugo/static/css/main.css
+++ b/themes/beautifulhugo/static/css/main.css
@@ -691,3 +691,12 @@ p.credits.theme-by > a > img {
   float: none;
   display: inline;
 }
+
+p code:not(.hljs), li code:not(.hljs) {
+  margin: 0 2px;
+  padding: 0 5px;
+  border: 1px solid #e6e6e6;
+  background-color: #f2f2f2;
+  border-radius: 3px;
+  color: #222;
+}
