--- a/themes/beautifulhugo/layouts/index.html
+++ b/themes/beautifulhugo/layouts/index.html
@@ -1,16 +1,63 @@
 {{ define "main" }}
   <div role="main" class="container">
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+      <div class="col-lg-10 col-lg-offset-1 col-md-12">
         {{ with .Content }}
           <div class="well">
             {{.}}
           </div>
         {{ end }}
+      </div>
+    </div>
+    <div class="row equal front-page">
+        <div class="col-lg-3 col-lg-offset-1 col-md-3 col-sm-12">
+          <div class="front-page-left-sidebar container">
 
-        <div class="posts-list">
-          {{ $pag := .Paginate (where .Data.Pages "Type" "post") }}
-          {{ range $pag.Pages }}
+            <div class="row">
+              <div class="col-md-12 col-xs-6">
+                <img src="img/portrait_hex.png" alt="Jeremy Peach" />
+                <h2>Jeremy Peach</h2>
+                <div class="sidebar-words">
+                  data scientist at Microsoft,<br />works in R, SQL, and Spark
+                </div>
+              </div>
+              <div class="col-md-12 col-xs-6">
+                <div class="sidebar-words" style="margin-top: 12pt;">
+                  <div><a href="https://github.com/AnalyticJeremy" target="_blank"><span class="fa fa-github"></span> AnalyticJeremy</a></div>
+                  <div><a href="https://twitter.com/AnalyticJeremy" target="_blank"><span class="fa fa-twitter"></span> @AnalyticJeremy</a></div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <div class="col-lg-7 col-md-9 col-sm-12 right-column">
+          <h2 class="section-head"><img src="img/github.svg" />GitHub Highlights</h2>
+          <div class="posts-list">
+            <article class="post-preview">
+              <a href="https://github.com/AnalyticJeremy/MSFT-Hex-Stickers" target="_blank">
+                <h2 class="post-title">MSFT-Hex-Stickers</h2>
+              </a>
+              <div class="post-entry">
+                  a collection of Microsoft-themed hex sticker designs<br />
+                  Print them out and tessellate the Microsoft way!
+              </div>
+            </article>
+
+            <article class="post-preview">
+                <a href="https://github.com/AnalyticJeremy/StitchTileMapImages" target="_blank">
+                  <h2 class="post-title">StitchTileMapImages</h2>
+                </a>
+                <div class="post-entry">
+                    an Azure function that will create a single image from map tiles served over the web by Leaflet (or other slippy maps)
+                </div>
+              </article>
+            </div>
+
+          
+          <h2 class="section-head"><img src="img/logo.svg" />Most Recent Blog Posts</h2>
+          <div class="posts-list">
+          {{ range first 2 .Data.Pages }}
             <article class="post-preview">
               <a href="{{ .Permalink }}">
                 <h2 class="post-title">{{ .Title }}</h2>
@@ -57,6 +104,12 @@
                 <a href="{{ .URL }}page/{{ .Paginator.Next.PageNumber }}/">{{ i18n "olderPosts" }} &rarr;</a>
               </li>
             {{ end }}
+          </ul>
+        {{ else }}
+          <ul class="pager main-pager">
+            <li class="previous">
+              <a href="/post">All Posts</a>
+            </li>
           </ul>
         {{ end }}
       </div>
