Added link to site source code repo in the footer

--- a/themes/beautifulhugo/layouts/partials/footer.html
+++ b/themes/beautifulhugo/layouts/partials/footer.html
@@ -52,6 +52,9 @@
           <a href="http://gohugo.io/" target="_blank"><img src="/img/hugo.svg" /></a>&nbsp;+&nbsp;<a href="http://pages.github.com/" target="_blank"><img src="/img/github.svg" /></a> Powered by <a href="http://gohugo.io/" target="_blank">Hugo</a> &amp; <a href="http://pages.github.com/" target="_blank">GitHub Pages</a>
           &nbsp;&bull;&nbsp; Theme adapted from <a href="https://github.com/halogenica/beautifulhugo" target="_blank">Beautiful Hugo</a>          
         </p>
+        <p class="credits theme-by text-muted">
+          The full source code for this website is available on <a href="https://github.com/AnalyticJeremy/blog" target="_blank">GitHub</a>.
+        </p>
       </div>
         </p>
       </div>
