add Google Verification

--- a/themes/beautifulhugo/layouts/partials/head.html
+++ b/themes/beautifulhugo/layouts/partials/head.html
@@ -36,7 +36,8 @@
   <meta property="og:site_name" content="{{ .Site.Title }}" />
 <!-- Hugo Version number -->
   {{ .Hugo.Generator -}}
-<!-- Links and stylesheets -->
+  <meta name="google-site-verification" content="09T0pg7ltTgkJbSUZxGhILERTGMubx978cHEKeRw34I" />
+  <!-- Links and stylesheets -->
   <link rel="canonical" href="{{ .URL | absLangURL }}" />
   {{- if .RSSLink }}
   <link rel="alternate" href="{{ .RSSLink }}" type="application/rss+xml" title="{{ .Site.Title }}">
